# crypto_trading_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
crypto_bot/: __init__.py  __main__.py  _bootstrap.py  bot_runner.py  config.py  exchange.py  logging_setup.py  main.py  state.py
crypto_bot/backtest/: engine.py
crypto_bot/data/: coingecko.py  historical.py  live_feed.py
crypto_bot/execution/: broker.py
crypto_bot/features/: engineer.py
crypto_bot/frontend/: app.py  dashboard.html
crypto_bot/regime/: __init__.py  detector.py
crypto_bot/risk/: manager.py
crypto_bot/strategy/: breakout.py  ensemble.py  mean_reversion.py  trend.py
