[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-bot"
version = "1.0.0"
description = "Modular crypto trading bot"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "hmmlearn>=0.3.0",
    "xgboost>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
crypto-bot = "crypto_bot.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crypto_bot*"]